src/component/dropdown/snapshots/envision__component__dropdown__tests__view_closed_empty.snap
---
source: src/component/dropdown/tests.rs
expression: terminal.backend().to_string()
---
┌────────────────────────────┐
│Search... ▼                 │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
│                            │
└────────────────────────────┘
